fix: fix the hour pointer that wasn't properly aligned
feature: add toggle to switch between local time and UTC time

feature: add miliseconds check to make the seconds pointer smoother

--- a/style.scss
+++ b/style.scss
@@ -5,126 +5,117 @@ body {
 $num-elements: 12;
 $angle-between-elements: (360 / $num-elements);
 
-$big-radius: 400px;
-$small-radius: $big-radius/10;
+$big-diameter: 400px;
+$small-diameter: $big-diameter/10;
 
-$pointer-length: $big-radius/4;
-$pointer-width: 6px;
-
-$minute-pointer-length: $big-radius/3;
-$minute-pointer-width: 6px;
-
-$seconds-pointer-length: $big-radius/3;
-$seconds-pointer-width: 4px;
+$pointers: (
+  hour: (
+    length: $big-diameter/4,
+    width: 6px,
+  ),
+  minute: (
+    length: $big-diameter/3,
+    width: 6px,
+  ),
+  seconds: (
+    length: $big-diameter/3,
+    width: 4px,
+  ),
+);
 
 .clock_radius {
   position: absolute;
-  left: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 60%;
   top: 50%;
   transform: translate(-50%, -50%);
-  height: $big-radius;
-  width: $big-radius;
+  height: $big-diameter;
+  width: $big-diameter;
   border-radius: 50%;
   background-color: rgb(176, 176, 206);
+}
+
+.circular_text {
+  font-size: 40px;
+  transform: rotate(180deg);
 }
 
 .hour {
   position: absolute;
   left: 50%;
   top: 50%;
-  margin: -($small-radius/2);
-
+  margin: -($small-diameter/2);
   display: flex;
   justify-content: center;
   align-items: center;
-
-  width: $small-radius;
-  height: $small-radius;
-
+  width: $small-diameter;
+  height: $small-diameter;
   border: solid 1px;
   border-radius: 50%;
-
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 400;
+  user-select: none;
 }
 
 @for $i from 1 through $num-elements {
   .hour:nth-child(#{$i}) {
     transform: rotate($i * $angle-between-elements * 1deg)
-      translate(0px, -$big-radius/6 * 2.5)
+      translate(0px, -$big-diameter/6 * 2.5)
       rotate(-$i * 30deg);
   }
 }
 
 .center {
   position: absolute;
-
   width: 10px;
   height: 10px;
-
   top: 50%;
   left: 50%;
-
   translate: -50% -50%;
-
   border-radius: 50%;
-
   background-color: rgb(8, 39, 59);
 }
 
-.hour_pointer {
+.buttons_box {
   position: absolute;
-  top: ((($big-radius)-($pointer-length))/3);
-  left: ((($big-radius)-($pointer-width))/2);
-
-  width: $pointer-width;
-  height: $pointer-length;
-
-  background-color: rgb(8, 39, 59);
-  border-radius: 50% 50% 3px 3px;
-
+  left: 10%;
+  top: 50%;
+  translate: 0% -50%;
   display: flex;
-  align-items: end;
+  justify-content: center;
+  gap: 10px;
+}
 
+@mixin pointer($length, $width, $color) {
+  position: absolute;
+  border-radius: 50% 50% 3px 3px;
+  transform: rotate(0deg);
+  width: $width;
+  height: $length;
+  left: (($big-diameter - $width)/2);
+  background-color: $color;
   transform-origin: bottom center;
-  transform: rotate(0deg);
 }
 
-.minute_pointer {
-  position: absolute;
-  top: ((($big-radius)-($minute-pointer-length))/4);
-  left: ((($big-radius)-($minute-pointer-width))/2);
+@each $pointer, $values in $pointers {
+  .#{$pointer}_pointer {
+    @include pointer(
+      map-get($values, length),
+      map-get($values, width),
+      if($pointer == seconds, rgb(196, 22, 10), rgb(8, 39, 59))
+    );
 
-  width: $minute-pointer-width;
-  height: $minute-pointer-length;
-
-  background-color: rgb(8, 39, 59);
-  border-radius: 50% 50% 3px 3px;
-
-  display: flex;
-  align-items: end;
-
-  transform-origin: bottom center;
-  transform: rotate(0deg);
-}
-
-.seconds_pointer {
-  position: absolute;
-
-  top: (($big-radius - $seconds-pointer-length) / 2.86);
-  left: ((($big-radius)-($seconds-pointer-width))/2);
-
-  width: $seconds-pointer-width;
-  height: $seconds-pointer-length;
-
-  background-color: rgb(196, 22, 10);
-  border-radius: 50% 50% 3px 3px;
-
-  display: flex;
-  align-items: end;
-
-  transform-origin: center $seconds-pointer-length * 0.8;
-  transform: rotate(0deg);
-
-  z-index: 10;
+    @if $pointer == hour {
+      top: (map-get($values, length));
+    }
+    @if $pointer == minute {
+      top: (map-get($values, length) / 2);
+    }
+    @if $pointer == seconds {
+      top: (map-get($values, length) * 0.7);
+      transform-origin: center (map-get($values, length) * 0.8);
+    }
+  }
 }
